--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,6 @@ body {
 }
 
 /* TODO: Just for Header */
-.header {
-
-}
-
 .header ul li {
   display: inline-block;
   padding: 10px;
@@ -16,6 +12,7 @@ body {
 
 .header a {
   color: black;
+  text-decoration: none;
 }
 
 .header a i {
@@ -50,8 +47,14 @@ body {
   padding: 30px;
   font-size: 25px;
 }
-.main .row {
-  border-right:
+
+.main a {
+  text-decoration: none;
+}
+
+.main a i.red {
+  color: red;
+  font-size: 15px;
 }
 /* TODO: Just for footer */
 .footer {
@@ -64,4 +67,9 @@ body {
 
 .footer p i {
   color: red;
+}
+
+.footer a {
+  color: black;
+  text-decoration: none;
 }
